@@ -13,6 +13,16 @@
 
 #if defined(_WIN32) || defined(__WIN32__)
 #define snprintf _snprintf
+#define strcasecmp _stricmp
+#define strncasecmp _strnicmp
+#ifndef HAVE_STDINT_H
+typedef __int8 int8_t;
+typedef unsigned __int8 uint8_t;
+typedef __int16 int16_t;
+typedef unsigned __int16 uint16_t;
+typedef __int32 int32_t;
+typedef unsigned __int32 uint32_t;
+#endif /* HAVE_STDINT_H */
 #endif
 
 #ifdef HAVE___ATTRIBUTE__
